fix: stop charts from flickering

--- a/src/app/key-metrics/key-metrics.component.scss
+++ b/src/app/key-metrics/key-metrics.component.scss
@@ -4,6 +4,8 @@ h1 {
 }
 .chart-container {
   padding: 30px 0;
+  height: 0;
+  padding-bottom: 60%;
   h1 {
     text-align: center;
   }
@@ -11,8 +13,10 @@ h1 {
     max-width: 1000px;
     margin: 0 auto;
     padding: 30px;
+    padding-bottom: 60%;
     @media (max-width: 400px) {
       padding: 30px 0 0 0;
+      padding-bottom: 60%;
     } 
   }
   &.pie {
